// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка есть wanted === ERROR constraints === ERROR 1`] = `
Object {
  "key": "Есть юридические ограничения",
  "status": "ERROR",
}
`;

exports[`карточка есть wanted === ERROR constraints === OK 1`] = `
Object {
  "key": "Есть юридические ограничения",
  "status": "ERROR",
}
`;

exports[`карточка есть wanted === ERROR constraints === UNKNOWN 1`] = `
Object {
  "key": "Есть юридические ограничения",
  "status": "ERROR",
}
`;

exports[`карточка есть wanted === OK constraints === ERROR 1`] = `
Object {
  "key": "Есть юридические ограничения",
  "status": "ERROR",
}
`;

exports[`карточка есть wanted === OK constraints === OK 1`] = `
Object {
  "key": "Данные о розыске и запрете на регистрацию не найдены",
}
`;

exports[`карточка есть wanted === OK constraints === UNKNOWN 1`] = `
Object {
  "key": "Данные о розыске и запрете на регистрацию появятся позже",
  "status": "UNKNOWN",
}
`;

exports[`карточка есть wanted === UNKNOWN constraints === ERROR 1`] = `
Object {
  "key": "Есть юридические ограничения",
  "status": "ERROR",
}
`;

exports[`карточка есть wanted === UNKNOWN constraints === OK 1`] = `
Object {
  "key": "Данные о розыске и запрете на регистрацию появятся позже",
  "status": "UNKNOWN",
}
`;

exports[`карточка есть wanted === UNKNOWN constraints === UNKNOWN 1`] = `
Object {
  "key": "Данные о розыске и запрете на регистрацию появятся позже",
  "status": "UNKNOWN",
}
`;

exports[`карточка нет wanted constraints === ERROR 1`] = `
Object {
  "key": "Есть юридические ограничения",
}
`;

exports[`карточка нет wanted constraints === OK 1`] = `
Object {
  "key": "Юридические ограничения не найдены",
}
`;

exports[`карточка нет wanted constraints === UNKNOWN 1`] = `
Object {
  "key": "Поиск данных о юридических ограничениях",
}
`;

exports[`полный отчет есть wanted === ERROR constraints === ERROR 1`] = `
Object {
  "key": "Наличие ограничений",
  "value": "Есть записи",
}
`;

exports[`полный отчет есть wanted === ERROR constraints === OK 1`] = `
Object {
  "key": "Наличие ограничений",
  "value": "Нет записей",
}
`;

exports[`полный отчет есть wanted === ERROR constraints === UNKNOWN 1`] = `
Object {
  "key": "Наличие ограничений",
  "value": "Информация появится чуть позже",
}
`;

exports[`полный отчет нет wanted constraints === ERROR 1`] = `
Object {
  "key": "Наличие ограничений",
  "value": "Есть записи",
}
`;

exports[`полный отчет нет wanted constraints === OK 1`] = `
Object {
  "key": "Наличие ограничений",
  "value": "Нет записей",
}
`;

exports[`полный отчет нет wanted constraints === UNKNOWN 1`] = `
Object {
  "key": "Наличие ограничений",
  "value": "Информация появится чуть позже",
}
`;
